WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271176
RELEASE_ASSERT() under PrintContext::spoolPage()
https://bugs.webkit.org/show_bug.cgi?id=271176
Summary
RELEASE_ASSERT() under PrintContext::spoolPage()
Chris Dumez
Reported
2024-03-18 13:37:20 PDT
RELEASE_ASSERT() under PrintContext::spoolPage(): ``` 8 WTFCrashWithInfo(int, char const*, char const*, int) ==> 8 WebCore::PrintContext::spoolPage(WebCore::GraphicsContext&, int, float) <== 8 WebKit::WebPage::drawToImage(WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> >, WebKit::PrintInfo const&, WTF::CompletionHandler<void (WebKit::ShareableBitmapHandle&&)>&&) 8 auto void IPC::callMemberFunction<WebKit::WebPage, WebKit::WebPage, void (WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> >, WebKit::PrintInfo const&, WTF::CompletionHandler<void (WebKit::ShareableBitmapHandle&&)>&&), std::__1::tuple<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> >, WebKit::PrintInfo>, void (WebKit::ShareableBitmapHandle&&)>(WebKit::WebPage*, void (WebKit::WebPage::*)(WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> >, WebKit::PrintInfo const&, WTF::CompletionHandler<void (WebKit::ShareableBitmapHandle&&)>&&), std::__1::tuple<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> >, WebKit::PrintInfo>&&, WTF::CompletionHandler<void (WebKit::ShareableBitmapHandle&&)>&&)::'lambda'(auto&&...)::operator()<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits> >, WebKit::PrintInfo>(auto&&...) const ```
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-03-18 13:37:27 PDT
<
rdar://122974558
>
Chris Dumez
Comment 2
2024-03-18 13:39:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26068
EWS
Comment 3
2024-03-19 11:59:46 PDT
Committed
276361@main
(8f4ad0b7b3a5): <
https://commits.webkit.org/276361@main
> Reviewed commits have been landed. Closing PR #26068 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug