Cherry-pick 276361@main (8f4ad0b7b3a5). https://bugs.webkit.org/show_bug.cgi?id=271176

RELEASE_ASSERT() under PrintContext::spoolPage()
    https://bugs.webkit.org/show_bug.cgi?id=271176
    rdar://122974558

    Reviewed by Ryosuke Niwa.

    Make sure the page index is valid before calling spoolPage().

    * Source/WebKit/WebProcess/WebPage/WebPage.cpp:
    (WebKit::WebPage::drawPagesToPDFImpl):
    * Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
    (WebKit::WebPage::drawToImage):

    Canonical link: https://commits.webkit.org/276361@main

Canonical link: https://commits.webkit.org/274313.121@webkitglib/2.44