Source/WebKit/WebProcess/WebPage/WebPage.cpp
@@ -6316,9 +6316,11 @@ void WebPage::drawPagesToPDFImpl(FrameIdentifier frameID, const PrintInfo& print
         } else
 #endif
         {
-            size_t pageCount = m_printContext->pageCount();
+            if (!m_printContext)
+                return;
+
             for (uint32_t page = first; page < first + count; ++page) {
-                if (page >= pageCount)
+                if (page >= m_printContext->pageCount())
                     break;
 
                 RetainPtr<CFDictionaryRef> pageInfo = adoptCF(CFDictionaryCreateMutable(0, 0, &kCFTypeDictionaryKeyCallBacks, &kCFTypeDictionaryValueCallBacks));
